fix letter spacing for mobile

--- a/main.css
+++ b/main.css
@@ -25,6 +25,7 @@
   --bg: #111111;
 
   --mobile-size: 15px;
+  --mobile-letter-spacing: 0.03em;
 }
 
 .hoverCard span {
@@ -252,7 +253,7 @@ footer {
 
 @media (max-width: 450px) {
   .landing {
-    padding: 32px 14px 14px 14px;
+    padding: 32px 16px 14px 16px;
     column-gap: 0;
   }
 
@@ -261,7 +262,7 @@ footer {
   span
   {
     line-height: 1.4em;
-    font-size: 15px;
-    letter-spacing: 0em;
+    font-size: var(--mobile-size);
+    letter-spacing: var(--mobile-letter-spacing);
   }
 }
